# hadithi

./: .gitattributes  .gitignore  README.md  notes.md
.github/workflows/: main.yml
LLM/: README.md  papers.md
dev.io/: .gitignore  README.md  docker-compose.yaml  installation.md  load-extensions.sh  pg-Dockerfile  pixi.toml  proj.env  pyproject.toml  solid.md
dev.io/agents/: README.md  pyproject.toml
dev.io/agents/src/agents/: hello.py
dev.io/agents/tests/: test_hello.py
dev.io/assets/: example.html  languages.csv
dev.io/assets/books/: test.parquet
dev.io/bees/: README.md  pyproject.toml
dev.io/bees/src/bees/: hive.py
dev.io/cumsum/: Cargo.toml  pyproject.toml
dev.io/cumsum/src/: lib.rs
dev.io/danish/data/: get_data.py
dev.io/decorations/: pyproject.toml
dev.io/decorations/src/decorations/: context.py  function.py  klass.py  main.py
dev.io/eloise/: .gitignore  README.md  pyproject.toml
dev.io/eloise/src/eloise/: agent.py
dev.io/emotions/: README.md  pyproject.toml
dev.io/emotions/data/: emotions.db  examples.json  tests.json
dev.io/emotions/notebooks/: hello-dspy.ipynb  mvp-backup.ipynb  mvp-dspy.ipynb  mvp-instructor.ipynb  mvp.ipynb
dev.io/emotions/src/emotions/: sentiments.py
dev.io/emotions/tests/: conftest.py  test_emotions.py
dev.io/intuitions/: CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
dev.io/intuitions/docs/: index.md  modules.md
dev.io/intuitions/intuitions/: echo.py
dev.io/intuitions/notebooks/: breast.py  human.py
dev.io/intuitions/notebooks/assets/: penguin.jpg_small
dev.io/intuitions/tests/: test_echo.py
dev.io/joyapp/: README.md  app.py  config.py  learn.sh  ml.py  predict.sh  pyproject.toml  schemas.py
dev.io/joyapp/data/: penguins.json  penguins.py  validation.json
dev.io/knn/: Cargo.toml  README.md  pixi.toml  pyproject.toml
dev.io/knn/src/: crab.rs  lib.rs  snake.rs
dev.io/knn/use/: ml.py
dev.io/knowledge/: .gitattributes  README.md  docker-compose.yaml  pyproject.toml  upload.py
dev.io/knowledge/data/ratings/: user_rating_0_to_1000.csv  user_rating_1000_to_2000.csv  user_rating_2000_to_3000.csv  user_rating_3000_to_4000.csv  user_rating_4000_to_5000.csv  user_rating_5000_to_6000.csv
dev.io/knowledge/notebooks/: crud.ipynb  linear.ipynb  quiz.ipynb  recommendation++.ipynb  recommendation.ipynb  similarity.ipynb  weaviate.ipynb
dev.io/mlops/sematicops/: pyproject.toml
dev.io/mlops/sematicops/clones/: __main__.py  ml.py  pipeline.py  requirements.txt  rio.py
dev.io/mlops/sematicops/data/: penguins.json
dev.io/movies/: hello.py  pyproject.toml
dev.io/movies/data/: clean.csv  movie_query.sql
dev.io/movies/notebooks/: bolig.ipynb  movies.ipynb  prep.ipynb
dev.io/notebooks/: a|b.ipynb  birds.ipynb  design.ipynb  graph.ipynb  ml_bayes.ipynb  recommendation.ipynb
dev.io/simplicity/: README.md  example.txt  pyproject.toml  simple.py  simplest.py
dev.io/simplicity/bank/: alt_encapsulated.py  encapsulated.py  not_encapsulated.py
dev.io/simplicity/loader/: simple.py  simpler.py  simplest.py
dev.io/simplicity/tests/: test_account.py  test_deposit.py  test_withdraw.py
mlfluke/: README.md  pyproject.toml
mlfluke/notebooks/: bigrams.ipynb  pipelines+classifier.ipynb  sentiments.ipynb  sentiments_beyond.ipynb  stopwords.py  translate.py
mlfluke/notebooks/data/: eloisenoramario.md
mlfluke/notebooks/utils/: lazylogger.py  mlloader.py
pipelines/: README,md  README.md
softskills/: README.md
talks/: README.md  lectures.md  pixi.toml
talks/notebooks/: bendit.ipynb  example.ipynb  ford_perfect.ipynb  simpsons_paradox.csv
timeseries/: README.md
tools/: README.md
visualization/: README.md
