[tool.poetry]
name = "mining"
version = "0.0.1"
description = "ibis, pandas, and polars"
authors = ["Prayson W. Daniel <prayson.wilfred@nttdata.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.6"
polars = "^0.18.6"
pandas = "^2.0.3"
ibis-framework = {extras = ["duckdb", "postgres"], version = "^6.0.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
black = "^23.7.0"
ruff = "^0.0.277"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
