[tool.poetry]
name = "mining"
version = "0.0.1"
description = "ibis, pandas, and polars"
authors = ["Prayson W. Daniel <prayson.wilfred@nttdata.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.6"
polars = "^0.18.6"
pandas = "^2.0.3"
ibis-framework = {extras = ["duckdb", "postgres"], version = "^6.0.0"}
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"
httpx = "^0.25.0"
mimesis = "^11.1.0"
neomodel = "^5.1.2"
parsel = "^1.8.1"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
black = "^23.7.0"
ruff = "^0.0.277"
pytest = "^7.4.0"
nbformat = "^5.9.2"

[tool.poetry.group.eda.dependencies]
plotly = "^5.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
