[tool.poetry]
name = "sentiment"
version = "0.1.0"
description = "How to Build ML Solutions"
authors = ["Prayson W. Daniel <praysonwilfred@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8.1,<3.10.0"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
skorch = "^0.11.0"
torch = {version = "^1.10.1", python = "^3.8", platform = "linux"}

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.1"
matplotlib = "^3.5.1"
watermark = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
