[tool.poetry]
name = "sentiment"
version = "0.1.0"
description = "How to Build ML Solutions"
authors = ["Prayson W. Daniel <praysonwilfred@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8.1,<3.10.0"
torch = [
  {url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp38-cp38-win_amd64.whl", markers = "sys_platform == 'win32'"}
]

pandas = "^1.3.5"
scikit-learn = "^1.0.2"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
skorch = "^0.11.0"
transformers = "^4.16.2"
sentencepiece = "^0.1.96"
ipywidgets = "^7.6.5"
plotly = "^5.6.0"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.1"
matplotlib = "^3.5.1"
watermark = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
