[project]
name = "bees"
version = "0.1.0"
description = "Simple Swam using local models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "saa>=0.0.8",
    "swarm",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = [
  "A", # warn about shadowing built-ins
  "E", # style stuff, whitespaces
  "F", # important pyflakes lints
  "I", # import sorting
  "N", # naming
]

[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
