[project]
name = "eloise"
version = "0.1.0"
description = "MCP example"
readme = "README.md"
authors = [
    { name = "Prayson W. Daniel", email = "praysonpi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.65.1",
    "smolagents[mcp]>=1.13.0",
    "typer >=0.15.2", # just for prettiness
    "rich>=14.0.0", # ditto
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
qa = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[project.scripts]
eloise = "eloise.agent:main"
