[project]
name = "emotions"
version = "0.1.0"
description = "LLM emoitons"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.4.3",
    "ollama>=0.3.3",
    "polars>=1.7.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "watermark>=2.5.0",
]

[tool.ruff.lint]
select = [
	  "A", # warn about shadowing built-ins
	  "E", # style stuff, whitespaces
	  "F", # important pyflakes lints
	  "I", # import sorting
	  "N", # naming
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "E501",
] # ignore file too long in examples
