[project]
name = "joyapp"
version = "0.1.0"
description = "Pure Joy Dev.to"
authors = [
    { name = "proteusiq", email = "praysonpi@gmail.com" }
]
dependencies = [
    "river>=0.21.1",
    "fastapi>=0.110.2",
    "uvicorn>=0.29.0",
    "watchdog>=4.0.0",
    "tenacity>=8.2.3",
    "orjson>=3.10.1",
    "scikit-learn>=1.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.1",
    "ruff>=0.4.1",
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
