[project]
name = "knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.4.1",
    "duckdb>=1.1.3",
    "pandas>=2.2.3",
    "polars>=1.13.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.5.2",
    "weaviate-client>=4.9.3",
]

[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "ipykernel>=6.29.5",
    "pickleshare>=0.7.5",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "watermark>=2.5.0",
]
