[project]
name = "movies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.1.2",
    "hiplot>=0.1.33",
    "polars>=1.9.0",
    "pyarrow>=17.0.0",
    "river>=0.21.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pickleshare>=0.7.5",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
    "watermark>=2.5.0",
]
