[tool.poetry]
name = "sematicops"
version = "0.1.0"
description = "Testing semtatic"
authors = ["Prayson W. Daniel <prayson.wilfred@nttdata.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
sematic = "^0.34.1"
orjson = "^3.9.7"
river = "^0.19.0"
pandas = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.290"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
